# aws-robomaker-sample-application-pr2-hospital

./: README.md  roboMakerSettings.json
robot_ws/src/: LICENSE.txt
robot_ws/src/pr2_hospital_robot/: CMakeLists.txt  package.xml
robot_ws/src/pr2_hospital_robot/config/: costmap_common_params.yaml
robot_ws/src/pr2_hospital_robot/launch/: move_base.launch  pr2_2dnav.launch
simulation_ws/: .rosinstall
simulation_ws/src/pr2_hospital_simulation/: CMakeLists.txt  package.xml
simulation_ws/src/pr2_hospital_simulation/launch/: hospital.launch  move_base.launch  pr2_2dnav.launch  view_hospital.launch
