<?xml version="1.0"?>
<package format="2">
  <name>pr2_hospital_simulation</name>
  <version>1.2.0</version>
  <description>
    AWS RoboMaker simulation package of a PR2 in an Gazebo Hospital world.
  </description>
  <license>MIT</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>pr2_gazebo</exec_depend>
  <exec_depend>pr2_teleop</exec_depend>
  <exec_depend>pr2_navigation</exec_depend>
</package>
